dope sheet's column select (alt + click) gets ignored #41077

Closed
opened 2014-07-15 06:44:48 +02:00 by Yousef Harfoush · 6 comments

System Information
windows 8.1 update1, geforce 660

Blender Version
tested in #dd9a33d and found the error

Short description of error
dope sheet's column select (alt + click) gets ignored after moving it's track in the NLA

Exact steps for others to reproduce the error
in the attached file:alt_click_error.blend

  • just move one of the tracks in the NLA
  • select the moved track and press tab
  • in the dope sheet below, try to alt click select a column of keys: it won't respond
  • select the upper track and do the same it will respond.
  • move the moved track back to it's place, and try again it will respond!
**System Information** windows 8.1 update1, geforce 660 **Blender Version** tested in #dd9a33d and found the error **Short description of error** dope sheet's column select (alt + click) gets ignored after moving it's track in the NLA **Exact steps for others to reproduce the error** in the attached file:[alt_click_error.blend](https://archive.blender.org/developer/F97859/alt_click_error.blend) - just move one of the tracks in the NLA - select the moved track and press tab - in the dope sheet below, try to alt click select a column of keys: it won't respond - select the upper track and do the same it will respond. - move the moved track back to it's place, and try again it will respond!
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Author
Member

Added subscriber: @bat3a

Added subscriber: @bat3a

Added subscriber: @mont29

Added subscriber: @mont29
Joshua Leung was assigned by Bastien Montagne 2014-07-15 08:38:35 +02:00

I can confirm this here (latest master, linux64).

Joshua, think this one is for you? :)

I can confirm this here (latest master, linux64). Joshua, think this one is for you? :)
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Member

Fixed in c03d8a1

Fixed in c03d8a1
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#41077
No description provided.