Bugfix T41077: Dope sheet's column select (alt + click) gets ignored with NLA Strips

NLA mapping corrections were being applied twice, causing column select to fail